[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/StageScene3D/BaseStageScene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Props/platform.png" type="Texture" id=3]
[ext_resource path="res://Player/StageScene3D/Scenes3/EggLaying.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=469]
flags_transparent = true
vertex_color_use_as_albedo = true

[sub_resource type="QuadMesh" id=470]
size = Vector2( 0.05, 0.05 )

[sub_resource type="AnimationNodeAnimation" id=446]
animation = "CuffedArms-loop"

[sub_resource type="AnimationNodeBlend2" id=447]
filter_enabled = true
filters = [ "Doll3D/Skeleton:Arm.L", "Doll3D/Skeleton:Arm.R", "Doll3D/Skeleton:ForeArm.L", "Doll3D/Skeleton:ForeArm.R", "Doll3D/Skeleton:Hand.L", "Doll3D/Skeleton:Hand.R" ]

[sub_resource type="AnimationNodeAnimation" id=461]
animation = "EggLaying-loop"

[sub_resource type="AnimationNodeAnimation" id=462]
animation = "EggLayingDo-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=463]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id=464]
switch_mode = 2
auto_advance = true
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=465]
states/EggLaying-loop/node = SubResource( 461 )
states/EggLaying-loop/position = Vector2( 430, 48 )
states/EggLayingDo-loop/node = SubResource( 462 )
states/EggLayingDo-loop/position = Vector2( 746, 48 )
transitions = [ "EggLaying-loop", "EggLayingDo-loop", SubResource( 463 ), "EggLayingDo-loop", "EggLaying-loop", SubResource( 464 ) ]
start_node = "EggLaying-loop"
graph_offset = Vector2( 37, -71 )

[sub_resource type="AnimationNodeBlendTree" id=466]
graph_offset = Vector2( -189.156, 41.0513 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 465 )
nodes/StateMachine/position = Vector2( 200, 100 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=460]

[sub_resource type="PhysicsMaterial" id=468]
friction = 0.91

[sub_resource type="BoxShape" id=467]
extents = Vector3( 4.86804, 1, 8.13402 )

[node name="EggLaying" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573566, 0.388868, 0 )
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.440314, -0.703153 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Doll3D" parent="." index="1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.30331, -0.120824, 0 )

[node name="EggSpawnerNode" type="Spatial" parent="Doll3D/BoneAttachments/VaginaBoneAttachment" index="5"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.413, -0.316, -0.274 )

[node name="SquirtEggParticles" type="CPUParticles" parent="Doll3D/BoneAttachments/VaginaBoneAttachment" index="6"]
unique_name_in_owner = true
transform = Transform( -0.204462, 0.978875, 0, -0.978875, -0.204462, 0, 0, 0, 1, 0.393339, -0.315288, 0 )
material_override = SubResource( 469 )
emitting = false
amount = 16
one_shot = true
explosiveness = 0.67
local_coords = false
mesh = SubResource( 470 )
initial_velocity = 6.76
initial_velocity_random = 0.29
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0, 0.278431, 0, 1 )
hue_variation = 0.03
hue_variation_random = 1.0

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource( 466 )
anim_player = NodePath("../Doll3D/DollSkeleton3/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 460 )

[node name="StartEggTimer" type="Timer" parent="." index="3"]
unique_name_in_owner = true
wait_time = 0.3
autostart = true

[node name="EggTimer" type="Timer" parent="." index="4"]
unique_name_in_owner = true
one_shot = true

[node name="StaticBody" type="StaticBody" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.12712, 0 )
physics_material_override = SubResource( 468 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody" index="0"]
shape = SubResource( 467 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="6"]
transform = Transform( 0.969132, -0.12517, 0.212404, 0, 0.861532, 0.507704, -0.246542, -0.492032, 0.834938, 0, 0.929249, 0 )
light_color = Color( 1, 0.988235, 0.945098, 1 )
light_energy = 2.0

[connection signal="timeout" from="StartEggTimer" to="." method="_on_StartEggTimer_timeout"]
[connection signal="timeout" from="EggTimer" to="." method="_on_EggTimer_timeout"]

[editable path="Doll3D"]
[editable path="Doll3D/DollSkeleton"]
[editable path="Doll3D/DollSkeleton2"]
[editable path="Doll3D/DollSkeleton3"]
